# lib/models/DutchV2Order.ts
@@ -13,6 +13,8 @@ export class DutchV2Order extends Order {
     readonly chainId: number,
     readonly orderStatus?: ORDER_STATUS,
     readonly txHash?: string,
+    readonly fillBlock?: number,
+    readonly fillTimestamp?: number,
     readonly quoteId?: string,
     readonly requestId?: string,
     readonly createdAt?: number,
@@ -67,6 +69,8 @@ export class DutchV2Order extends Order {
         outputOverrides: decodedOrder.info.cosignerData.outputOverrides.map((o) => o.toString()),
       },
       txHash: this.txHash,
+      fillBlock: this.fillBlock,
+      fillTimestamp: this.fillTimestamp,
       cosignature: decodedOrder.info.cosignature,
       quoteId: this.quoteId,
       requestId: this.requestId,
@@ -98,6 +102,8 @@ export class DutchV2Order extends Order {
       entity.chainId,
       entity.orderStatus,
       entity.txHash,
+      entity.fillBlock,
+      entity.fillTimestamp,
       entity.quoteId,
       entity.requestId,
       entity.createdAt,
@@ -115,6 +121,8 @@ export class DutchV2Order extends Order {
       chainId: this.chainId,
       nonce: this.inner.info.nonce.toString(),
       txHash: this.txHash,
+      fillBlock: this.fillBlock,
+      fillTimestamp: this.fillTimestamp,
       orderHash: this.inner.hash(),
       swapper: this.inner.info.swapper,
       reactor: this.inner.info.reactor,
